Fix some layout bugs, change some styles.

--- a/src/app/core/components/bs-navbar/bs-navbar.component.css
+++ b/src/app/core/components/bs-navbar/bs-navbar.component.css
@@ -7,3 +7,7 @@
 .dropdown-toggle::after {
   color: #ffbc00;
 }
+
+.fixed-top {
+  z-index: 1000 !important;
+}
