--- a/src/app/shopping/components/products/product-filter/product-filter.component.css
+++ b/src/app/shopping/components/products/product-filter/product-filter.component.css
@@ -11,13 +11,11 @@
    } */
   
   .category-filter {
-    background-color: #23272B;
-    color: #ffbc00 !important; 
+    font-weight: 700;
+    background: rgb(252,234,187); /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(252,234,187,1) 0%, rgba(252,205,77,1) 4%, rgba(252,205,77,1) 4%, rgba(252,205,77,1) 57%, rgba(255,188,0,1) 82%, rgba(71,71,71,1) 97%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(252,234,187,1) 0%,rgba(252,205,77,1) 4%,rgba(252,205,77,1) 4%,rgba(252,205,77,1) 57%,rgba(255,188,0,1) 82%,rgba(71,71,71,1) 97%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(252,234,187,1) 0%,rgba(252,205,77,1) 4%,rgba(252,205,77,1) 4%,rgba(252,205,77,1) 57%,rgba(255,188,0,1) 82%,rgba(71,71,71,1) 97%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fceabb', endColorstr='#474747',GradientType=0 ); /* IE6-9 */
   }
   
-  .shadow {  
-    font: bold 22px Helvetica, Arial, Sans-Serif;
-    text-shadow: 1px 1px #5e4b0d, 
-                 2px 2px #5e4b0d, 
-                 3px 3px #5e4b0d;
- }
